src/objects/FunLoc__c.object
<CustomObject>
    <description>FunLoc database  - a store all the FunLocs used in NXP ( includes the migrated FunLoc from Lotus Notes Database )</description>
    <fields>
        <fullName>APD_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PD Indicator</description>
        <inlineHelpText>PD Indicator</inlineHelpText>
        <label>PD Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Affiliation__c</fullName>
        <description>Affiliation</description>
        <inlineHelpText>Affiliation</inlineHelpText>
        <label>Affiliation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CSD</fullName>
                </value>
                <value>
                    <fullName>NCD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alloc_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Alloc Indicator</description>
        <inlineHelpText>Alloc Indicator</inlineHelpText>
        <label>Alloc Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Belongs_To_FU__c</fullName>
        <description>Belongs to FU K527</description>
        <inlineHelpText>Belongs to FU K527</inlineHelpText>
        <label>Belongs To FU</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Belongs_To_LE__c</fullName>
        <description>Belongs To LE</description>
        <inlineHelpText>Belongs To LE</inlineHelpText>
        <label>Belongs To LE</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Belongs_To_PD__c</fullName>
        <description>Belongs To PD</description>
        <inlineHelpText>Belongs To PD</inlineHelpText>
        <label>Belongs To PD</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Belongs_To_RO__c</fullName>
        <description>Belongs To RO</description>
        <inlineHelpText>Belongs To RO</inlineHelpText>
        <label>Belongs To RO</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building__c</fullName>
        <description>Building</description>
        <inlineHelpText>Building</inlineHelpText>
        <label>Building</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Name__c</fullName>
        <description>Call Name</description>
        <inlineHelpText>Call Name</inlineHelpText>
        <label>Call Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Changed_By__c</fullName>
        <description>Changed by K688CB</description>
        <inlineHelpText>Changed by K688CB</inlineHelpText>
        <label>Changed By</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Controller_email__c</fullName>
        <description>Controller email</description>
        <inlineHelpText>Controller email</inlineHelpText>
        <label>Controller email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <description>Country Code</description>
        <inlineHelpText>Country Code</inlineHelpText>
        <label>Country Code</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Name__c</fullName>
        <description>Country Name</description>
        <inlineHelpText>Country Name</inlineHelpText>
        <label>Country Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Abkhazia</fullName>
                </value>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Akrotiri And Dhekelia</fullName>
                </value>
                <value>
                    <fullName>Åland</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua And Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bonaire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Invalid__c</fullName>
        <description>Date invalid K604</description>
        <inlineHelpText>Date invalid K604</inlineHelpText>
        <label>Date Invalid</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Valid__c</fullName>
        <description>Date valid K572</description>
        <inlineHelpText>Date valid K572</inlineHelpText>
        <label>Date Valid</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_Change__c</fullName>
        <description>Date of last change K587</description>
        <inlineHelpText>Date of last change K587</inlineHelpText>
        <label>Date of Last Change</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District_Name__c</fullName>
        <description>District Name</description>
        <inlineHelpText>District Name</inlineHelpText>
        <label>District Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EAN_Code__c</fullName>
        <description>EAN Code</description>
        <inlineHelpText>EAN Code</inlineHelpText>
        <label>EAN Code</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FU_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FU Indicator</description>
        <inlineHelpText>FU Indicator</inlineHelpText>
        <label>FU Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Floor__c</fullName>
        <description>Floor</description>
        <inlineHelpText>Floor</inlineHelpText>
        <label>Floor</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FunLoc_Number_Text__c</fullName>
        <formula>TEXT (FunLoc_Number__c)</formula>
        <label>FunLoc Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FunLoc_Number__c</fullName>
        <description>FunLoc Number</description>
        <externalId>true</externalId>
        <inlineHelpText>FunLoc Number</inlineHelpText>
        <label>FunLoc Number</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Funloc_Range__c</fullName>
        <label>Funloc Range</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NXP</fullName>
                    <default>true</default>
                    <label>NXP</label>
                </value>
                <value>
                    <fullName>WeEN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>House_Number__c</fullName>
        <description>House Number</description>
        <inlineHelpText>House Number</inlineHelpText>
        <label>House Number</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industrial_Zone__c</fullName>
        <description>Industrial Zone</description>
        <inlineHelpText>Industrial Zone</inlineHelpText>
        <label>Industrial Zone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Info_To__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Info to</description>
        <inlineHelpText>Info to</inlineHelpText>
        <label>Info To</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Info_from__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Info from</description>
        <inlineHelpText>Info from</inlineHelpText>
        <label>Info From</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_From__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Invoice from</description>
        <inlineHelpText>Invoice from</inlineHelpText>
        <label>Invoice From</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_To__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Invoice to</description>
        <inlineHelpText>Invoice to</inlineHelpText>
        <label>Invoice To</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LE_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>LE Indicator</description>
        <inlineHelpText>LE Indicator</inlineHelpText>
        <label>LE Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>1603 Production Request - SIR 789, Legacy Id from FSL</description>
        <externalId>true</externalId>
        <label>Legacy Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Legal_Entity_Name__c</fullName>
        <description>Legal Entity Name</description>
        <inlineHelpText>Legal Entity Name</inlineHelpText>
        <label>Legal Entity Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Life_Cycle_LE__c</fullName>
        <description>Life Cycle LE</description>
        <inlineHelpText>Life Cycle LE</inlineHelpText>
        <label>Life Cycle LE</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2 - Current</fullName>
                </value>
                <value>
                    <fullName>3 - Stopped</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Life_Cycle_RO__c</fullName>
        <description>Life cycle RO</description>
        <inlineHelpText>Life cycle RO</inlineHelpText>
        <label>Life Cycle RO</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2 - Current</fullName>
                </value>
                <value>
                    <fullName>3 - Stopped</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NXP_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>NXP Indicator</description>
        <inlineHelpText>NXP Indicator</inlineHelpText>
        <label>NXP Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Name</description>
        <inlineHelpText>Name</inlineHelpText>
        <label>Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <description>Number</description>
        <inlineHelpText>Number</inlineHelpText>
        <label>PO Box Number</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_From__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Order from</description>
        <inlineHelpText>Order from</inlineHelpText>
        <label>Order From</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_to__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Order to</description>
        <inlineHelpText>Order to</inlineHelpText>
        <label>Order to</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PD_Code__c</fullName>
        <description>PD Code</description>
        <inlineHelpText>PD Code</inlineHelpText>
        <label>PD Code</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Box_Country_Code__c</fullName>
        <description>Country Code for PO Box Address - (D004P)</description>
        <label>PO Box Country Code</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Box_Country_Name__c</fullName>
        <description>Country Name for PO Box Address - (D005P)</description>
        <label>PO Box Country Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Box_Place_Code__c</fullName>
        <description>Place Code for PO Box Address - (K656P)</description>
        <label>PO Box Place Code</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Box_Place_Name__c</fullName>
        <description>Place Name for PO Box Address - (D033P)</description>
        <label>PO Box Place Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Box_Post_Code__c</fullName>
        <description>Post Code for PO Box Address - (K576P)</description>
        <label>PO Box Post Code</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Box_Subdivision_Code__c</fullName>
        <description>Subdivision Code for PO Box Address - (K662P)</description>
        <label>PO Box Subdivision Code</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Box_Subdivision_Name__c</fullName>
        <description>Subdivision Name for PO Box Address - (K525P)</description>
        <label>PO Box Subdivision Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_from__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Payment from</description>
        <inlineHelpText>Payment from</inlineHelpText>
        <label>Payment From</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_to__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Payment to</description>
        <inlineHelpText>Payment to</inlineHelpText>
        <label>Payment To</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Place_Code__c</fullName>
        <description>Place Code</description>
        <inlineHelpText>Place Code</inlineHelpText>
        <label>Place Code</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Place_Name__c</fullName>
        <description>Place Name</description>
        <inlineHelpText>Place Name</inlineHelpText>
        <label>Place Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PostCode__c</fullName>
        <description>Post Code</description>
        <inlineHelpText>Post Code</inlineHelpText>
        <label>Post Code</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Service_Name__c</fullName>
        <description>Postal service name L101</description>
        <inlineHelpText>Postal service name L101</inlineHelpText>
        <label>PO Box Postal Service Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RO_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>RO Indicator</description>
        <inlineHelpText>RO Indicator</inlineHelpText>
        <label>RO Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remarks_C005__c</fullName>
        <description>Remarks</description>
        <inlineHelpText>Remarks</inlineHelpText>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Remarks_MA__c</fullName>
        <description>Remarks MA C005MA</description>
        <inlineHelpText>Remarks MA C005MA</inlineHelpText>
        <label>Remarks MA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Organization_Funloc__c</fullName>
        <description>Reporting organization funloc</description>
        <inlineHelpText>Reporting organization funloc</inlineHelpText>
        <label>Reporting Organization Funloc</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_type__c</fullName>
        <description>Reporting type</description>
        <inlineHelpText>Reporting type</inlineHelpText>
        <label>Reporting Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>I</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>U</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requested_By__c</fullName>
        <description>Requested by</description>
        <inlineHelpText>Requested by</inlineHelpText>
        <label>Requested By</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Room__c</fullName>
        <description>Room</description>
        <inlineHelpText>Room</inlineHelpText>
        <label>Room</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_From__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ship from</description>
        <inlineHelpText>Ship from</inlineHelpText>
        <label>Ship From</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ship_to__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ship to</description>
        <inlineHelpText>Ship to</inlineHelpText>
        <label>Ship To</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Street_Name__c</fullName>
        <description>Street Name</description>
        <inlineHelpText>Street Name</inlineHelpText>
        <label>Street Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SubName__c</fullName>
        <description>SubName</description>
        <inlineHelpText>SubName</inlineHelpText>
        <label>SubName</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Subdivision_Code__c</fullName>
        <description>State / Subdivision Code</description>
        <inlineHelpText>State / Subdivision Code</inlineHelpText>
        <label>State / Subdivision Code</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subdivision_Name__c</fullName>
        <description>State / Subdivision Name</description>
        <inlineHelpText>State / Subdivision Name</inlineHelpText>
        <label>State / Subdivision Name</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Country_Name__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Aceh</fullName>
                </value>
                <value>
                    <fullName>Aguascalientes</fullName>
                </value>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Alberta</fullName>
                </value>
                <value>
                    <fullName>Andaman And Nicobar Islands</fullName>
                </value>
                <value>
                    <fullName>Andhra Pradesh</fullName>
                </value>
                <value>
                    <fullName>An Giang</fullName>
                </value>
                <value>
                    <fullName>Anhui Province</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>Arunachal Pradesh</fullName>
                </value>
                <value>
                    <fullName>Assam</fullName>
                </value>
                <value>
                    <fullName>Bac Giang</fullName>
                </value>
                <value>
                    <fullName>Bac Kan</fullName>
                </value>
                <value>
                    <fullName>Bac Lieu</fullName>
                </value>
                <value>
                    <fullName>Bac Ninh</fullName>
                </value>
                <value>
                    <fullName>Baja California</fullName>
                </value>
                <value>
                    <fullName>Baja California S</fullName>
                </value>
                <value>
                    <fullName>Bali</fullName>
                </value>
                <value>
                    <fullName>Banten</fullName>
                </value>
                <value>
                    <fullName>Ba Ria Vung Tau</fullName>
                </value>
                <value>
                    <fullName>Beijing City</fullName>
                </value>
                <value>
                    <fullName>Bengkulu</fullName>
                </value>
                <value>
                    <fullName>Ben Tre</fullName>
                </value>
                <value>
                    <fullName>Bihar</fullName>
                </value>
                <value>
                    <fullName>Binh Dinh</fullName>
                </value>
                <value>
                    <fullName>Binh Duong</fullName>
                </value>
                <value>
                    <fullName>Binh Phuoc</fullName>
                </value>
                <value>
                    <fullName>Binh Thuan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <description>Subscription</description>
        <inlineHelpText>Subscription</inlineHelpText>
        <label>Subscription</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UpdatedBy__c</fullName>
        <description>UpdatedBy</description>
        <inlineHelpText>UpdatedBy</inlineHelpText>
        <label>UpdatedBy</label>
        <type>TextArea</type>
    </fields>
    <label>FunLoc</label>
    <listViews>
        <fullName>All</fullName>
        <columns>FunLoc_Number_Text__c</columns>
        <columns>Name__c</columns>
        <columns>Call_Name__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FL-{000000}</displayFormat>
        <label>FunLoc ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FunLocs</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Alloc_Indicator_Condition_Belongs_To_PD</fullName>
        <active>true</active>
        <description>When Alloc Indicator is selected Belongs to PD field is mandatory.</description>
        <errorConditionFormula>AND 
(  
IF ((  Alloc_Indicator__c  = TRUE ) , TRUE , FALSE ) , 

IF( (LEN ( TRIM(   Belongs_To_PD__c   ))= 0) , TRUE , FALSE ) 
)</errorConditionFormula>
        <errorDisplayField>Belongs_To_PD__c</errorDisplayField>
        <errorMessage>When Alloc Indicator is selected Belongs to PD field is mandatory.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Alloc_Indicator_Condition_Belongs_To_RO</fullName>
        <active>true</active>
        <description>When Alloc Indicator is selected Belongs To RO field is mandatory</description>
        <errorConditionFormula>AND 
(  
IF ((  Alloc_Indicator__c  = TRUE ) , TRUE , FALSE ) , 

IF( (LEN ( TRIM(  Belongs_To_RO__c  ))= 0) , TRUE , FALSE ) 
)</errorConditionFormula>
        <errorDisplayField>Belongs_To_RO__c</errorDisplayField>
        <errorMessage>When Alloc Indicator is selected Belongs To RO field is mandatory</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Change_Country_Existing_FunLoc</fullName>
        <active>false</active>
        <description>Country of an existing FunLoc cannot be changed.</description>
        <errorConditionFormula>ISCHANGED( Country_Name__c  )</errorConditionFormula>
        <errorDisplayField>Country_Name__c</errorDisplayField>
        <errorMessage>Country of an existing FunLoc cannot be changed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LE_Indicator_Condition_Affiliation</fullName>
        <active>true</active>
        <description>When LE Indicator is selected Affiliation field is mandatory.</description>
        <errorConditionFormula>AND 
(  
IF ((  LE_Indicator__c = TRUE ) , TRUE , FALSE ) , 

 ISPICKVAL(  Affiliation__c  , &quot;&quot; ) 

)</errorConditionFormula>
        <errorDisplayField>Affiliation__c</errorDisplayField>
        <errorMessage>When LE Indicator is selected Affiliation field is mandatory.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LE_Indicator_Condition_Belongs_to_PD</fullName>
        <active>true</active>
        <description>When LE Indicator is selected Belongs to PD field is mandatory.</description>
        <errorConditionFormula>AND 
(  
IF ((  LE_Indicator__c = TRUE ) , TRUE , FALSE ) , 

 IF( (LEN ( TRIM(  Belongs_To_PD__c ))= 0) , TRUE , FALSE )

)</errorConditionFormula>
        <errorDisplayField>Belongs_To_PD__c</errorDisplayField>
        <errorMessage>When LE Indicator is selected Belongs to PD field is mandatory.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LE_Indicator_Condition_Legal_Entity_Name</fullName>
        <active>true</active>
        <description>When LE Indicator is selected Legal Entity Name field is mandatory.</description>
        <errorConditionFormula>AND 
(  
IF ((  LE_Indicator__c = TRUE ) , TRUE , FALSE ) , 

 IF( (LEN ( TRIM(   Legal_Entity_Name__c  ))= 0) , TRUE , FALSE )

)</errorConditionFormula>
        <errorDisplayField>Legal_Entity_Name__c</errorDisplayField>
        <errorMessage>When LE Indicator is selected Legal Entity Name field is mandatory.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LE_Indicator_Condition_Life_Cycle_LE</fullName>
        <active>true</active>
        <description>When LE Indicator is selected Life Cycle LE field is mandatory.</description>
        <errorConditionFormula>AND 
(  
IF ((  LE_Indicator__c = TRUE ) , TRUE , FALSE ) , 

  ISPICKVAL(Life_Cycle_LE__c , &quot;&quot;) 

)</errorConditionFormula>
        <errorDisplayField>Life_Cycle_LE__c</errorDisplayField>
        <errorMessage>When LE Indicator is selected Life Cycle LE field is mandatory.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LE_Indicator_Condition_Reporting_Type</fullName>
        <active>true</active>
        <description>When LE Indicator is selected Reporting Type field is mandatory.</description>
        <errorConditionFormula>AND 
(  
IF ((  LE_Indicator__c = TRUE ) , TRUE , FALSE ) , 

 ISPICKVAL(Reporting_type__c , &quot;&quot;)  

)</errorConditionFormula>
        <errorDisplayField>Reporting_type__c</errorDisplayField>
        <errorMessage>When LE Indicator is selected Reporting Type field is mandatory.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LE_Indicator_Reporting_Org_FunLoc</fullName>
        <active>true</active>
        <description>When LE Indicator is selected and Reporting type = I , then Reporting Organization FunLoc field is mandatory.</description>
        <errorConditionFormula>AND 
(  
IF ((  LE_Indicator__c = TRUE ) , TRUE , FALSE ) , 
ISPICKVAL(Reporting_type__c , &quot;I&quot;)  ,
 IF( (LEN ( TRIM(   Reporting_Organization_Funloc__c  ))= 0) , TRUE , FALSE )

)</errorConditionFormula>
        <errorDisplayField>Reporting_Organization_Funloc__c</errorDisplayField>
        <errorMessage>When LE Indicator is selected and Reporting type = I , then Reporting Organization FunLoc field is mandatory.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Name_is_Mandatory</fullName>
        <active>true</active>
        <description>Name is a mandatory field</description>
        <errorConditionFormula>IF( LEN ( TRIM (Name__c)) = 0  , TRUE, FALSE)</errorConditionFormula>
        <errorDisplayField>Name__c</errorDisplayField>
        <errorMessage>Name is a mandatory field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RO_Indicator_Condition_Belongs_to_LE</fullName>
        <active>true</active>
        <description>When RO Indicator is selected Belongs to LE field is mandatory</description>
        <errorConditionFormula>AND 
(  
IF (( RO_Indicator__c = TRUE ) , TRUE , FALSE ) , 

 IF( (LEN ( TRIM(Belongs_To_LE__c))= 0) , TRUE , FALSE )

)</errorConditionFormula>
        <errorDisplayField>Belongs_To_LE__c</errorDisplayField>
        <errorMessage>When RO Indicator is selected Belongs to LE field is mandatory</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RO_Indicator_Condition_Belongs_to_PD</fullName>
        <active>true</active>
        <description>When RO Indicator is selected Belongs to PD field is mandatory.</description>
        <errorConditionFormula>AND 
(  
IF (( RO_Indicator__c = TRUE ) , TRUE , FALSE ) , 

 IF( (LEN ( TRIM(  Belongs_To_PD__c ))= 0) , TRUE , FALSE )

)</errorConditionFormula>
        <errorDisplayField>Belongs_To_PD__c</errorDisplayField>
        <errorMessage>When RO Indicator is selected Belongs to PD field is mandatory.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RO_Indicator_Condition_Life_Cycle_RO</fullName>
        <active>true</active>
        <description>When RO Indicator is selected Life Cycle RO field is mandatory</description>
        <errorConditionFormula>AND 
(  
IF (( RO_Indicator__c = TRUE ) , TRUE , FALSE ) , 

  ISPICKVAL( Life_Cycle_RO__c ,&quot;&quot; ) 
)</errorConditionFormula>
        <errorDisplayField>Life_Cycle_RO__c</errorDisplayField>
        <errorMessage>When RO Indicator is selected Life Cycle RO field is mandatory</errorMessage>
    </validationRules>
</CustomObject>